# FitnessVA

./: README.md  fitness_agent.py  fitness_va_colab_inf.ipynb  main.py  pyproject.toml  security_results.json
Eval/: advanced_toggle_results.json  evaluation_results.json
