[project]
name = "llama-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.33.0",
    "duckduckgo-search>=5.3.0",
    "huggingface-hub>=0.23.4",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.1",
    "torch>=2.1.0",
    "transformers>=4.43.1",
]
